buildscript {
    ext {
        springBootVersion = '2.2.0.RELEASE'
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
    }
}

apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

allprojects {
    group = 'com.qaprosoft'
    version = "${version != 'unspecified' ? version : '1.0-SNAPSHOT'}"
}

apply from: 'dependencies.gradle'

repositories {
    mavenLocal()
    maven {
        url = 'http://repo.maven.apache.org/maven2'
    }
}

def libraries = rootProject.ext.dependencyManagement

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    repositories {
        mavenLocal()
        maven {
            url = 'http://repo.maven.apache.org/maven2'
        }
    }

    sourceCompatibility = '11'
    targetCompatibility = '11'

    configurations.all {
    }

    dependencies {
        annotationProcessor libraries.lombok
        compileOnly libraries.lombok
    }

    dependencyManagement {
        imports {
            mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

}
